2007-02-12  Hans Breuer  <hans@breuer.org>

	* lib/libdia.def : added text_get_line_strlen
	* makefile.msc : delete config.h on clean
	
	* plug-ins/python/pydia-property.c : allow to set sting properties 
	with unicode 

2007-02-10  Hans Breuer  <hans@breuer.org>

	[ two more steps slowly fixing issues from bug #340352 ]
	* plug-ins/python/diamodule.c : instead of breaking compatibility with
	former PyDia plug-ins reimplmented dia.register_calback() by mapping
	to the GtkAction framework (it is not yet possible again to create 
	new menus, only adding menuitems to existing menus)
	* plug-ins/python/select_by.py : restored menuitems to shorter form

2007-02-08  Steffen Macke <sdteffen@gmail.com>

	* installer/win32/dia.nsi:
	* installer/win32/langmacros.nsh:
	* installer/win32/locale/*.nsh: Added Python plug-in
	
2007-02-05  Lars Clausen  <lars@raeder.dk>

	* NEWS: 
	* RELEASE-PROCESS: 
	* config.h.win32: 
	* doc/en/dia.xml: 
	* doc/pl/dia.xml: 
	* doc/eu/dia.xml:
	* configure.in: Pre4

	* plug-ins/vdx/vdx-export.c: Patch for crash.

2007-02-03  Lars Clausen  <lars@raeder.dk>

	* lib/dialibartrenderer.c (get_text_width): 
	* lib/diagdkrenderer.c (get_text_width): 
	* lib/text.c: Use g_utf8_strlen where character, not bytes are the
	goal.  Also remove utterly the unnecessary optimization of keeping
	strlen around for each and every line.

	* lib/text.[ch]: Remove clearly unneeded array of strlen.  Easier
	to just call strlen when needed.

	* objects/GRAFCET/action_text_draw.c (action_text_draw): Change
	offending direct use of text->strlen.

	* plug-ins/vdx/vdx.c
	* plug-ins/vdx/vdx-common.c
	* plug-ins/vdx/vdx-export.c
	* plug-ins/vdx/vdx.h
	* plug-ins/vdx/vdx-import.c
	* plug-ins/vdx/vdx-xml.c
	* plug-ins/vdx/visio-types.h: Upgrade to version 0.9 of VDX
	plug-in. 


2007-01-28  Hans Breuer  <hans@breuer.org>

	* app/recent_files.c : don't treat underscores in filenames as 
	accelerators, see bug #340352
	* app/menus.c : again register a translation function for 